tests/NormalTests/paczka1/fuzzy1/82334919.err
Error in line 17: A299 A564 83,9
Error in line 29: kGG A299 35,7
Error in line 37: SmO5T 389 2,9
